fixed grammatical error

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         </p>
         <p>
           This website uses randomly generated numbers to estimate the value of
-          &pi; by using the property that the probability of any number two
-          numbers being coprime is 6 / &pi;<sup>2</sup>.
+          &pi; by using the property that the probability of any two numbers
+          being coprime is 6 / &pi;<sup>2</sup>.
         </p>
         <p>
           If many random number pairs are created (say
